--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mood Tracker</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="calender.css">
   </head>
   <body>
     <header>
       <h1 id="heading">Mood Tracker</h1>
     </header>
-    <a href="/calender.html"  id="moodLogs">Mood Logs</a>
     <div class="main">
       <div class="moodEmojis">
         <img src="/Assets/happy.svg" alt="happy" id="happy" class="emojis" />
@@ -39,6 +39,29 @@
           id="neutral"
           class="emojis"
         />
+      </div>
+    </div>
+    <div class="todaysMood"></div>
+    <div class="calenderWrapper">
+      <div class="months">
+        <p class="currentDate"></p>
+        <div class="icons">
+          <span id="prev"><</span>
+          <span id="next">></span>
+        </div>
+      </div>
+      <div class="calender">
+        <ul class="weekDays">
+          <li>Sun</li>
+          <li>Mon</li>
+          <li>Tue</li>
+          <li>Wed</li>
+          <li>Thu</li>
+          <li>Fri</li>
+          <li>Sat</li>
+        </ul>
+        <ol class="days">
+        </ol>
       </div>
     </div>
   </body>
