--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <h1 id="heading">Mood Tracker</h1>
+      <h3 id="ques">How's Your Mood Today ?</h3>
     </header>
     <div class="main">
       <div class="moodEmojis">
@@ -42,9 +43,10 @@
       </div>
     </div>
     <div class="todaysMood"></div>
+
     <div class="calenderWrapper">
       <div class="months">
-        <p class="currentDate"></p>
+        <p class="currentDate">March 2025</p>
         <div class="icons">
           <span id="prev"><</span>
           <span id="next">></span>
@@ -52,15 +54,16 @@
       </div>
       <div class="calender">
         <ul class="weekDays">
-          <li>Sun</li>
-          <li>Mon</li>
-          <li>Tue</li>
-          <li>Wed</li>
-          <li>Thu</li>
-          <li>Fri</li>
-          <li>Sat</li>
+          <li>Sunday</li>
+          <li>Monday</li>
+          <li>Tuesday</li>
+          <li>Wednesday</li>
+          <li>Thursday</li>
+          <li>Friday</li>
+          <li>Saturday</li>
         </ul>
         <ol class="days">
+         
         </ol>
       </div>
     </div>
