--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="calenderWrapper">
       <div class="months">
-        <p class="currentDate">March 2025</p>
+        <p class="currentDate"></p>
         <div class="icons">
           <span id="prev"><</span>
           <span id="next">></span>
