completed just need to cleanup code

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
         <ol class="days"></ol>
       </div>
     </div>
+    <div class="lastFiveDaysData">
+      <h2 style="color:indigo;">Recent Mood History</h2>
+    </div>
   </body>
   <script src="/index.js"></script>
 </html>
