--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
       </div>
       <div class="calender">
         <ul class="weekDays">
-          <li>Sunday</li>
-          <li>Monday</li>
-          <li>Tuesday</li>
-          <li>Wednesday</li>
-          <li>Thursday</li>
-          <li>Friday</li>
-          <li>Saturday</li>
+          <li data-short="S"><span>Sunday</span></li>
+          <li data-short="M"><span>Monday</span></li>
+          <li data-short="T"><span>Tuesday</span></li>
+          <li data-short="W"><span>Wednesday</span></li>
+          <li data-short="T"><span>Thursday</span></li>
+          <li data-short="F"><span>Friday</span></li>
+          <li data-short="S"><span>Saturday</span></li>
         </ul>
         <ol class="days"></ol>
       </div>
