--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         <ol class="days"></ol>
       </div>
     </div>
+    <h2 style="color:indigo; margin-top: 20px;">Recent Mood History</h2>
     <div class="lastFiveDaysData">
-      <h2 style="color:indigo;">Recent Mood History</h2>
     </div>
   </body>
   <script src="/index.js"></script>
